Bug 371958 - Setting up lookup column not possible
Summary: Setting up lookup column not possible
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Tables (other bugs)
Version First Reported In: 3.0.0
Platform: Compiled Sources All
: NOR normal
Target Milestone: 3.0.1
Assignee: Kexi Bugs
URL:
Keywords:
Depends on:
Blocks: 371896
  Show dependency treegraph
 
Reported: 2016-11-01 22:07 UTC by Jarosław Staniek
Modified: 2017-04-10 14:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2016-11-01 22:07:21 UTC
Setting up lookup column not possible - regression in 3.0.0.

To reproduce:
Set up lookup column for a table field.

Result:
The lookup column is not saved to the design.

Existing table designs work OK.
Comment 1 Jarosław Staniek 2016-11-01 22:18:48 UTC
Git commit 00a56880fa69f78fd986bc5f3565c6c5b00d5d40 by Jaroslaw Staniek.
Committed on 01/11/2016 at 22:17.
Pushed by staniek into branch '3.0'.

Fix identifying table properties as related to lookup field

This fix improves saving of table design in Kexi.

M  +2    -2    src/KDb.cpp

http://commits.kde.org/kdb/00a56880fa69f78fd986bc5f3565c6c5b00d5d40
Comment 2 Jarosław Staniek 2016-11-01 22:18:48 UTC
Git commit a838c603033c656dc32cf100c7c96409e5d10c39 by Jaroslaw Staniek.
Committed on 01/11/2016 at 22:15.
Pushed by staniek into branch '3.0'.

Fix setting properties for lookup column (record source related)

This fixes setting up lookup column in Kexi Table Designer

FIXED-IN:3.0.1

M  +1    -0    src/KDbLookupFieldSchema.cpp

http://commits.kde.org/kdb/a838c603033c656dc32cf100c7c96409e5d10c39
Comment 3 Jarosław Staniek 2016-11-03 00:41:45 UTC
Git commit 06f4c2f9629afe52f3e0b28cbc82cb17c208fb6a by Jaroslaw Staniek.
Committed on 03/11/2016 at 00:40.
Pushed by staniek into branch '3.0'.

Fix altering physical table design when lookup fields are in use

Example: renaming a field.
This is a regression in Kexi 3.0.0.
FIXED-IN:3.0.1

M  +4    -2    src/plugins/tables/kexitabledesignerview.cpp

http://commits.kde.org/kexi/06f4c2f9629afe52f3e0b28cbc82cb17c208fb6a