Fix setting properties for lookup column (record source related)

This fixes setting up lookup column in Kexi Table Designer

BUG:371958

FIXED-IN:3.0.1